# await-tree

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: check-test.yaml  publish.yml
await-tree-attributes/: Cargo.toml  README.md
await-tree-attributes/src/: lib.rs
await-tree-attributes/tests/: expansion.rs  integration.rs
await-tree-macros/: Cargo.toml  README.md
await-tree-macros/src/: lib.rs
await-tree-macros/tests/: expansion.rs  integration.rs
benches/: basic.rs
examples/: basic.rs  color.rs  detach.rs  global.rs  instrument.rs  long_running.rs  multiple.rs  serde.rs  spawn.rs  verbose.rs
examples.disabled/: basic.rs  multiple.rs
src/: context.rs  future.rs  global.rs  lib.rs  obj_utils.rs  registry.rs  root.rs  span.rs  spawn.rs  tests.rs  utils.rs
src/tests/: functionality.rs  spawn.rs
