[package]
name = "await-tree"
version = "0.1.0"
edition = "2021"
description = "Instrument await-tree for actor-based applications."
repository = "https://github.com/risingwavelabs/await-tree"
keywords = ["async", "tokio", "backtrace", "actor"]
categories = ["development-tools::debugging"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coarsetime = "0.1"
derive_builder = "0.12"
flexstr = "0.9"
indextree = "4"
itertools = "0.10"
parking_lot = "0.12"
pin-project = "1"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["async", "async_tokio"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }

[[bench]]
name = "basic"
harness = false
