[package]
name = "await-tree"
version = "0.3.0-alpha.1"
edition = "2021"
description = "Generate accurate and informative tree dumps of asynchronous tasks."
repository = "https://github.com/risingwavelabs/await-tree"
keywords = ["async", "tokio", "backtrace", "actor"]
categories = ["development-tools::debugging"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coarsetime = "0.1"
derive_builder = "0.20"
easy-ext = "1"
flexstr = { version = "0.9", features = ["serde"] }
indextree = "4"
itertools = "0.12"
parking_lot = "0.12"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
weak-table = "0.3.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }

[[bench]]
name = "basic"
harness = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'fat'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
